--- a/SCSS/_cards.scss
+++ b/SCSS/_cards.scss
@@ -11,16 +11,19 @@
     outline: 1px solid $color_gris_claro;
     outline-offset: -8px;
     box-shadow: rgba(87, 169, 218, 0.884) 3px 4px 17px;
-    -moz-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+/*     -moz-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
     -webkit-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
-    -o-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+    -o-transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1); */
     transition: 2.5s cubic-bezier(0.4, 0.2, 0.2, 1);
+    @include compatibilidad_transition(2.5s cubic-bezier(0.4, 0.2, 0.2, 1));
     &:hover .card_content{
         opacity: 1;
         transform: translateY(0rem);
+        @include compatibilidad_transform(translateY(0rem));
     };
     &:hover .dp{
         transform: translateY(15rem);
+        @include compatibilidad_transform(translateY(15rem));
     };
 }
 .dp{
@@ -31,6 +34,7 @@
     height: 100%;
     position: absolute;
     transition: all 1s ease-in-out;
+    @include compatibilidad_transition(all 1s ease-in-out);
     padding: 1em;
     .card_title{
         font-family: $letra__principal;
@@ -51,6 +55,8 @@
     padding: 1em;
     transform: translateY(-15rem);
     transition: all 1s ease-in-out;
+    @include compatibilidad_transition(all 1s ease-in-out);
+    @include compatibilidad_transform(translateY(-15rem));
     .card_paragraph{
         font-family: $letra__secundaria;
         color: $color_gris_claro;
