--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -780,6 +780,9 @@ footer{
             @include compatibilidad_transform(scale(1.2));
         }
     }
+    .footer__copyright{
+        width: 70%;
+    }
 }
 //Responsive
 @media screen and (max-width: 1100px) {
